major overhaul to a tree view, still work needed on visual side

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <title>New tab</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="index.js"></script>
+    <meta charset="UTF-8">
 </head>
 
 <body>
-    <div id="root"></div>
+    <ul id="root">
+        <p>.</p>
+    </ul>
 </body>
 
 </html>
