fixed the file tree visuals

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <ul id="root">
-        <p>.</p>
-    </ul>
+    <div class="container">
+        <ul id="root">
+            <p>.</p>
+        </ul>
+    </div>
 </body>
 
 </html>
