added a prompt and changed colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="container">
         <ul id="root">
+            <p><span class="prompt-arrow">➜</span> bookmarks <span class="prompt-git-outer">git:(<span
+                        class="prompt-git-inner">main</span>)</span> <span class="prompt-separator">✗</span> <span
+                    class="prompt-command">tree</span></p>
             <p>.</p>
         </ul>
     </div>
