--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     <div class="container">
         <ul id="root">
+            <!-- Prompt -->
             <p><span class="prompt-arrow">➜</span> bookmarks <span class="prompt-git-outer">git:(<span
                         class="prompt-git-inner">main</span>)</span> <span class="prompt-separator">✗</span> <span
                     class="prompt-command">tree</span></p>
+
+            <!-- Root of file tree -->
             <p>.</p>
         </ul>
     </div>
